--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor de Planes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://edeyson.github.io/omnitours/style.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
         <pre id="outputJson"></pre>
     </div>
 
-    <script src="script.js"></script>
+    <script src="https://edeyson.github.io/omnitours/script.js"></script>
 </body>
 
 </html>
