--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ ul li {
             <p>El archivo <span>planes1.json</span> contiene los planes turísticos. Usaremos una herramienta interactiva para realizar los cambios:</p>
             
             <ol>
-                <li>Accede a la herramienta de edición y abre el archivo <span> planes1.json</span> (<a target="_blank" href="/index1.html">Entrar a editar el archivo aquí</a>).</li>
+                <li>Accede a la herramienta de edición y abre el archivo <span> planes1.json</span> (<a target="_blank" href="https://edeyson.github.io/omnitours/index1.html">Entrar a editar el archivo aquí</a>).</li>
                 <li>Agrega, elimina o edita los planes existentes, marcando o desmarcando los meses activos.</li>
                 <li>Una vez realizados los cambios, copia el nuevo JSON generado.</li>
             </ol>
@@ -137,7 +137,7 @@ ul li {
         <div class="summary">
             <h3>Resumen de Pasos</h3>
             <ul>
-                <li>Editar el JSON en la herramienta web <a target="_blank" href="/index1.html">Entrar a editar el archivo aquí</a>.</li>
+                <li>Editar el JSON en la herramienta web <a target="_blank" href="https://edeyson.github.io/omnitours/index1.html">Entrar a editar el archivo aquí</a>.</li>
                 <li>Abrir el repositorio en <a href="https://vscode.dev/github.com/Edeyson/omnitours" target="_blank">VS Code Web</a>.</li>
                 <li>Pegar el nuevo JSON en <span>planes1.json</span> y guardarlo.</li>
                 <li>Hacer commit y enviar (push) los cambios a GitHub.</li>
