--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ ul li {
         </div>
 
         <div class="step">
-            <h2>Paso 2: Abrir el Repositorio en VS Code Web</h2>
+            <h2>Paso 2: Abrir el Repositorio para editar</h2>
             <ol>
-                <li>Abre el repositorio en VS Code Web haciendo clic <a href="https://vscode.dev/github.com/Edeyson/omnitours" target="_blank">aquí</a>.</li>
+                <li>Abre el archivo del repositorio haciendo clic <a href="https://github.dev/Edeyson/omnitours/blob/master/planes1.json" target="_blank">aquí</a>.</li>
                 <li>En la barra lateral izquierda, navega hasta encontrar el archivo <span>planes1.json</span>.</li>
             </ol>
         </div>
@@ -138,7 +138,7 @@ ul li {
             <h3>Resumen de Pasos</h3>
             <ul>
                 <li>Editar el JSON en la herramienta web <a target="_blank" href="https://edeyson.github.io/omnitours/index1.html">Entrar a editar el archivo aquí</a>.</li>
-                <li>Abrir el repositorio en <a href="https://vscode.dev/github.com/Edeyson/omnitours" target="_blank">VS Code Web</a>.</li>
+                <li>Abrir el archivo <span>planes1.json</span> del repositorio <a href="https://github.dev/Edeyson/omnitours/blob/master/planes1.json" target="_blank">click aquí</a>.</li>
                 <li>Pegar el nuevo JSON en <span>planes1.json</span> y guardarlo.</li>
                 <li>Hacer commit y enviar (push) los cambios a GitHub.</li>
             </ul>
