--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instructivo para Editar planes1.json</title>
+    <link rel="SHORTCUT ICON" href="https://www.omnitours.com.co/Portals/1050/favicon 35x35.ico" type="image/x-icon">
     <style>
         body {
     font-family: Arial, sans-serif;
