--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor de Planes</title>
+    <link rel="SHORTCUT ICON" href="https://www.omnitours.com.co/Portals/1050/favicon 35x35.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://edeyson.github.io/omnitours/style.css">
 </head>
 
